# Medicare-drug-cost-navigator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  build-requirements.md  pyproject.toml  render.yaml
.cursor/skills/UI-tester/: SKILL.md  test-matrix.md
config/: benefit_params.yaml  demo_plans.yaml  deploy.yaml  disclaimer.txt  ingest_filters.yaml  policy_corpus.yaml
deploy/aws/: eventbridge-ecs-ingest.md
deploy/k8s/: cronjob-spuf-ingest.yaml
docs/: README.md  business-solution.md  data-sources.md  deployment.md  developer-guide.md  navigator-implementation-spec.md  phase-1-implementation-plan.md  phase-2-implementation-plan.md  phase-3-implementation-plan.md  phase-4-implementation-plan.md  phase-5-implementation-plan.md  phase-6-implementation-plan.md  technical-notes.md
frontend/src/: app.js  index.html  styles.css
scripts/: build-frontend.sh  docker-start.sh  generate-crontab.py  run-daily-ingest.sh
src/medicare_navigator/: __init__.py  config.py
tests/: __init__.py  conftest.py  spuf_fixture.py  test_chat_qa.py  test_citations.py  test_clarification.py  test_cms_download.py  test_connection.py  test_db_resilience.py  test_estimate_drug_cost.py  test_explain_cost_change.py  test_follow_up.py  test_health.py  test_intake.py  test_llm_mock.py  test_manifest_freshness.py  test_mcp_registry.py  test_navigator.py  test_ndc.py  test_normalize_drug.py  test_pipeline_policy.py  test_policy_agent.py  test_policy_corpus.py  test_policy_retrieval.py  test_spuf_ingest.py  test_supply_estimate.py  test_synthesis.py  test_tools.py  test_ui.py
(+77 files in other folders)
