[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medicare-navigator"
version = "0.1.0"
description = "Medicare Drug Cost & Benefit-Transparency Navigator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "duckdb>=1.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "instructor>=1.7.0",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
medicare-ingest = "medicare_navigator.ingestion.cli:main"
medicare-eval = "medicare_navigator.eval.run_eval:main"

[tool.hatch.build.targets.wheel]
packages = ["src/medicare_navigator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
